--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "npx nx run atmn-shop:serve"
+    "start": "npx nx run atmn-shop:serve",
+    "build:dev": "npx nx run atmn-shop:build:development"
   },
   "private": true,
   "dependencies": {
