--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^16.1.0",
     "@ngrx/store-devtools": "^16.1.0",
     "@nx/angular": "16.5.5",
+    "ng-gallery": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
