--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@atmn-shop/cart/feature": ["libs/cart/feature/src/index.ts"],
       "@atmn-shop/cart/models": ["libs/cart/models/src/index.ts"],
       "@atmn-shop/cart/ui": ["libs/cart/ui/src/index.ts"],
+      "@atmn-shop/cart/routes": ["libs/cart/feature/src/routes.ts"],
       "@atmn-shop/navigation/data": ["libs/navigation/data/src/index.ts"],
       "@atmn-shop/navigation/feature": ["libs/navigation/feature/src/index.ts"],
       "@atmn-shop/navigation/model": ["libs/navigation/model/src/index.ts"],
